fix confirm dialog not showing in fullscreen

--- a/octoprint_dashboard/static/css/dashboard.css
+++ b/octoprint_dashboard/static/css/dashboard.css
@@ -528,3 +528,7 @@ svg text {
   text-align: center;
   padding-top: 40vh;
 }
+
+body:fullscreen .ui-pnotify {
+  display: none;
+}
